--- a/index.html
+++ b/index.html
@@ -27,53 +27,6 @@
         a:hover {
             color: #0056b3;
         }
-        table {
-            background-color: #ffffff;
-        }
-        table thead th {
-            background-color: #007bff;
-            color: white;
-        }
-        td img {
-            display: block;
-            margin: auto;
-        }
-        .floating-box {
-            position: fixed;
-            bottom: 20px;
-            right: 20px;
-            display: flex;
-            flex-direction: column;
-        }
-        .floating-box a {
-            margin: 5px;
-            padding: 10px;
-            background-color: #007bff;
-            color: white;
-            text-align: center;
-            border-radius: 5px;
-            text-decoration: none;
-            transition: background-color 0.3s;
-        }
-        .floating-box a:hover {
-            background-color: #0056b3;
-        }
-        .pagination {
-            margin-top: 20px;
-            text-align: center;
-        }
-        .pagination button {
-            margin: 0 5px;
-            padding: 10px 15px;
-            background-color: #007bff;
-            color: #fff;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-        .pagination button.active {
-            background-color: #0056b3;
-        }
         .results-grid .book-item {
             display: inline-block;
             width: 200px;
@@ -90,6 +43,22 @@
         }
         .book-item p {
             text-align: center;
+        }
+        .pagination {
+            margin-top: 20px;
+            text-align: center;
+        }
+        .pagination button {
+            margin: 0 5px;
+            padding: 10px 15px;
+            background-color: #007bff;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        .pagination button.active {
+            background-color: #0056b3;
         }
     </style>
 </head>
@@ -161,6 +130,7 @@
         $(document).ready(function () {
             $('#search-button').click(function () {
                 searchTerm = $('#search-term').val();
+                console.log(`Search term: ${searchTerm}`);
                 currentPage = 1;
                 searchBooks();
             });
@@ -179,7 +149,11 @@
                 url: `https://www.googleapis.com/books/v1/volumes?q=${searchTerm}&startIndex=${(currentPage - 1) * 10}&maxResults=10&key=${apiKey}`,
                 type: 'GET',
                 success: function (data) {
+                    console.log('Search results:', data);
                     displayResults(data);
+                },
+                error: function (error) {
+                    console.error('Error fetching search results:', error);
                 }
             });
         }
@@ -221,6 +195,7 @@
                 url: `https://www.googleapis.com/books/v1/volumes/${bookId}?key=${apiKey}`,
                 type: 'GET',
                 success: function (data) {
+                    console.log('Book details:', data);
                     const template = document.getElementById('book-details-template').innerHTML;
                     const book = {
                         title: data.volumeInfo.title,
@@ -231,6 +206,9 @@
                     };
                     const rendered = Mustache.render(template, book);
                     $('#book-details').html(rendered).show();
+                },
+                error: function (error) {
+                    console.error('Error fetching book details:', error);
                 }
             });
         }
@@ -240,6 +218,7 @@
                 url: `https://www.googleapis.com/books/v1/volumes?q=best+sellers&maxResults=10&key=${apiKey}`,
                 type: 'GET',
                 success: function (data) {
+                    console.log('Top selling books:', data);
                     const template = document.getElementById('search-results-template').innerHTML;
                     const books = data.items.map(item => ({
                         id: item.id,
@@ -248,6 +227,9 @@
                     }));
                     const rendered = Mustache.render(template, { books });
                     $('#top-selling-books').html(rendered);
+                },
+                error: function (error) {
+                    console.error('Error fetching top selling books:', error);
                 }
             });
         }
